--- a/index.html
+++ b/index.html
@@ -6,4 +6,16 @@ layout: single
 author_profile: true
 ---
 
-List of pages on this site
+## H2 List of pages on this site
+
+[Amaranth Tour](https://jeseyfried.github.io/amaranth-holding-area/tour/) 
+
+[3D Printer Guide](https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide/) 
+
+[Capitals 3D Use Case](https://jeseyfried.github.io/amaranth-holding-area/capitals/) 
+
+[Course Projects Guide](https://jeseyfried.github.io/amaranth-holding-area/projects-guide/) 
+
+[Poster Use Cases](https://jeseyfried.github.io/amaranth-holding-area/poster-use/) 
+
+[360 Camera Guide](https://jeseyfried.github.io/amaranth-holding-area/360-camera/) 
