--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: single
 author_profile: true
 ---
 
-## H2 List of pages on this site
+<h2>List of pages on this site</h2>
 
 [Amaranth Tour](https://jeseyfried.github.io/amaranth-holding-area/tour/) 
 
