--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ author_profile: true
 
 <h2>List of pages on this site</h2>
 
+[I'm an inline-style link](https://www.google.com)
+
 [Amaranth Tour](https://jeseyfried.github.io/amaranth-holding-area/tour) 
 
 [3D Printer Guide](https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide) 
