--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@ author_profile: true
 
 <h2>List of pages on this site</h2>
 
-[I'm an inline-style link](https://www.google.com)
+<a href="https://jeseyfried.github.io/amaranth-holding-area/tour">Amaranth Tour</a>
 
-[Amaranth Tour](https://jeseyfried.github.io/amaranth-holding-area/tour) 
+<a href="https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide">3D Printer Guide</a>
 
-[3D Printer Guide](https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide) 
+<a href="https://jeseyfried.github.io/amaranth-holding-area/capitals">Capitals 3D Use Case</a>
 
-[Capitals 3D Use Case](https://jeseyfried.github.io/amaranth-holding-area/capitals) 
+<a href="https://jeseyfried.github.io/amaranth-holding-area/projects-guide">Course Projects Guide</a>
 
-[Course Projects Guide](https://jeseyfried.github.io/amaranth-holding-area/projects-guide) 
+<a href="https://jeseyfried.github.io/amaranth-holding-area/poster-use">Poster Use Cases</a>
 
-[Poster Use Cases](https://jeseyfried.github.io/amaranth-holding-area/poster-use) 
-
-[360 Camera Guide](https://jeseyfried.github.io/amaranth-holding-area/360-camera) 
+<a href="https://jeseyfried.github.io/amaranth-holding-area/360-camera">360 Camera Guide</a>
