--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ author_profile: true
 
 <h2>List of pages on this site</h2>
 
-<a href="https://jeseyfried.github.io/amaranth-holding-area/tour">Amaranth Tour</a>
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/tour">Amaranth Tour</a></p>
 
-<a href="https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide">3D Printer Guide</a>
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide">3D Printer Guide</a></p>
 
-<a href="https://jeseyfried.github.io/amaranth-holding-area/capitals">Capitals 3D Use Case</a>
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/capitals">Capitals 3D Use Case</a></p>
 
-<a href="https://jeseyfried.github.io/amaranth-holding-area/projects-guide">Course Projects Guide</a>
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/projects-guide">Course Projects Guide</a></p>
 
-<a href="https://jeseyfried.github.io/amaranth-holding-area/poster-use">Poster Use Cases</a>
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/poster-use">Poster Use Cases</a></p>
 
-<a href="https://jeseyfried.github.io/amaranth-holding-area/360-camera">360 Camera Guide</a>
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/360-camera">360 Camera Guide</a></p>
