--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ author_profile: true
 
 <p><a href="https://jeseyfried.github.io/amaranth-holding-area/3d-printer-guide">3D Printer Guide</a></p>
 
+<p><a href="https://jeseyfried.github.io/amaranth-holding-area/3d-scanner-guide">3D Scanner Guide</a></p>
+
 <p><a href="https://jeseyfried.github.io/amaranth-holding-area/capitals">Capitals 3D Use Case</a></p>
 
 <p><a href="https://jeseyfried.github.io/amaranth-holding-area/projects-guide">Course Projects Guide</a></p>
